sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value plusPetitque
	while (!plusPetitque(j-1,temp) && j>=1 ) {
                ^